examples/kitchen-sink/src/ui/pages/cookbook/state/scope/page.abide
<script>
import Recipe from '$ui/Recipe.abide'

/* Cookbook · reactive state · scope basics. */
const LIVE = '/reactive-state'
</script>

<div class="flex flex-col gap-8">
    <div class="flex flex-col gap-2">
        <h1 class="text-3xl font-bold">state basics</h1>
        <p class="text-slate-600">
            <code class="font-mono">state</code> is the reactive cell — imported from
            <code class="font-mono">abide/ui/state</code> and called bare. A cell reads and writes
            like a plain variable.
        </p>
    </div>
    <div class="flex flex-col gap-4">
        <Recipe
            task="Create a local reactive cell"
            live={LIVE}
            code={`import { state } from '@abide/abide/ui/state'
let count = state(0)`}
            note={'`state(initial)` returns a writable cell you read and reassign as an ordinary variable. Import `state` from `abide/ui/state` first.'} />

        <Recipe
            task="Read a cell in the template"
            live={LIVE}
            code={`<p>count is {count}</p>`}
            note={'Reading a cell in markup subscribes that spot — it re-renders when the cell changes, no wrapper or `.value`.'} />

        <Recipe
            task="Update a cell from an event"
            live={LIVE}
            code={`<button onclick={() => (count += 1)}>increment</button>`}
            note={'Assign to the variable to update — the compiler routes it back through the cell. Any read of `count` re-runs.'} />

        <Recipe
            task="Toggle a boolean"
            live={LIVE}
            code={`let open = state(false)

<button onclick={() => (open = !open)}>toggle</button>`}
            note={'A boolean cell is the idiom for panels, menus, and modals. Read it in a `{#if open}` to show/hide.'} />

        <Recipe
            task="Update one field of an object cell"
            live={LIVE}
            code={`let form = state({ name: '', email: '' })

function setName(name) {
    form = { ...form, name }
}`}
            note={"Reassign the whole object — spread the old value and override the field. Mutating in place won't trigger reads."} />

        <Recipe
            task="Add an item to a list"
            live={LIVE}
            code={`let items = state([])

function add(item) {
    items = [...items, item]
}`}
            note={'Build a new array; assignment is the signal. The same rule as objects — no `.push`, which mutates in place.'} />

        <Recipe
            task="Remove an item from a list"
            live={LIVE}
            code={`function remove(id) {
    items = items.filter((item) => item.id !== id)
}`}
            note={"`filter` returns a fresh array. Key the rendering `{#for … by item.id}` so the removed row's node is the one dropped."} />

        <Recipe
            task="Edit an item in a list"
            live={LIVE}
            code={`function rename(id, name) {
    items = items.map((item) => (item.id === id ? { ...item, name } : item))
}`}
            note={'`map` with a spread on the matching row — every other row keeps its identity, so keyed rendering patches just the one.'} />

        <Recipe
            task="Track a selection set"
            live={LIVE}
            code={`let selected = state(new Set())

function toggle(id) {
    const next = new Set(selected)
    next.has(id) ? next.delete(id) : next.add(id)
    selected = next
}`}
            note={'Copy the Set, mutate the copy, reassign — the reactivity is in the assignment, so a new Set is what re-renders.'} />

        <Recipe
            task="Clamp or coerce every write"
            live={LIVE}
            code={`let qty = state(1, (next) => Math.max(1, Math.min(99, Number(next) || 0)))`}
            note={"`state`'s second argument is a transform run on every write — clamp ranges, round, or coerce a string input to a number in one place."} />

        <Recipe
            task="Reset state to its initial value"
            live={LIVE}
            code={`const INITIAL = { name: '', email: '' }
let form = state(INITIAL)

function reset() {
    form = INITIAL
}`}
            note={'Keep the initial in a constant and reassign it. For a draft that tracks a moving source, reach for `state.linked` instead (see derived).'} />

        <Recipe
            task="Import before you use a primitive"
            live={LIVE}
            code={`// error: state is not defined
let count = state(0)

// correct: import it
import { state } from '@abide/abide/ui/state'
let count = state(0)`}
            note={'`state` (with `state.computed` / `state.linked`) comes from `abide/ui/state`; `watch` from `abide/ui/watch`. Import the primitive you use — the compiler resolves the binding and owns each cell to the enclosing component lifetime.'} />
    </div>
</div>
